contrast fixing

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -42,7 +42,7 @@ nav a {
     padding: 10px;
     border: 1px solid black;
     background-color: var(--accent1-color);
-    opacity: 0.7;
+   
 }
 
 
@@ -102,9 +102,10 @@ nav, p, section, article {
 
 .history-title {
     font-family: var(--heading-font);
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     color: var(--accent3-color);
     text-align: center;
+
 }
 
 
@@ -573,7 +574,7 @@ iframe {
 
 .figcaption-title {
     margin-top: 1rem;
-    color: var(--accent2-color);
+    color: black;
     font-family: var(--heading-font);
     font-size: larger;
 }
@@ -597,6 +598,7 @@ table {
   padding: 10px;
   font-weight: 700;
   font-style: italic;
+  color: #000;
 }
 
 thead,
